# camera_aravis

./: CMakeLists.txt  README.markdown  package.xml  setup.py
CMakeModules/: FindAravis.cmake
examples/: capture_service_client.py  collect_image_and_joint_values.py  getconnecteddevices_service_client.py  sendCommand_service_client.py  setIO_service_client.py
include/camera_aravis/: DynamicReconfigureHelper.h  cameramanager.h  domtreehelper.h  genicam.h  genicamfeatures.h  servicecallbacks.h
launch/: auto_gen_test.launch  camera_free_run.launch  camera_sw_trig.launch  set_light.launch  test_set_parameter.launch
scripts/service_call_examples/: capture_service_client.py  collect_image_and_joint_values.py  getconnecteddevices_service_client.py  getfeaturevalue_service_client.py  sendCommand_service_client  sendCommand_service_client.py  setIO_service_client.py
src/: cameramanager.cpp  cameranode.cpp  camnode.cpp  genicam.cpp  genicamfeatures.cpp
srv/: AravisSetExposure.srv  GetFeatureValue.srv  SendCommand.srv  TriggerFlash.srv
