<package>
  <name>camera_aravis</name>
  <version>3.0.0</version>
  <description>camera_aravis: An ethernet camera driver for ROS.</description>

  <maintainer email="manuel.volk@xamla.com">Manuel Volk</maintainer>

  <author email="manuel.volk@xamla.com">Manuel Volk</author>
  <author email="andreas.koepf@xamla.com">Manuel Volk</author>

  <license>LGPLv2</license>

  <url type="website">https://github.com/Xamla/camera_aravis</url>
  
  <author>Xamla</author>
  <author>Manuel Volk</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>

</package>
